stop propagation on click on mobile nav

--- a/css/pages_style/contact.css
+++ b/css/pages_style/contact.css
@@ -540,8 +540,9 @@ top: 30vh;
 .cv {
   padding: 0.25rem 0.5rem;
  position: absolute;
- bottom: 10vh;
+ bottom: 5vh;
  left: 50%;
+ font-size: 0.8rem;
  transform: translateX(-50%);
  color: #fafafa;
  background-color: #000000;
